2003-06-18  Miguel Sofer <msofer@users.sf.net>

	* generic/tclNamesp.c (Tcl_Export): removed erroneous comments
	[Bug 756744]

2003-06-17  Vince Darley  <vincentdarley@users.sourceforge.net>

	* win/makefile.vc:  fixes to check-in below so compilation now
        works again on Windows.

	* generic/tclCmdMZ.c:
	* tests/regexp.test: fixing of bugs related to regexp and regsub
        matching of empty strings.  Addition of a number of new tests.

2003-06-16  Andreas Kupries  <andreask@activestate.com>

	* win/Makefile.in:  Haven't heard back from David for a week.
	* win/configure:    Now committing the remaining changes.
	* win/configure.in: Note: In active contact with Helmut Giese
	* win/makefile.vc:  about the borland relatedchanges. This part
	* win/rules.vc:     will see future updates.
	* win/tcl.m4:       
	* win/makefile.bc:

2003-06-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tclConfig.c (ASSOC_KEY): Changed the key to
	  "tclPackageAboutDict" (tcl prefix) to make collisions with the
	  keys of other packages more unlikely.

2003-06-10  Miguel Sofer <msofer@users.sf.net>

	* generic/tclBasic.c:
	* generic/tclExecute.c: let TclExecuteObjvInternal call
	TclInterpReady instead of relying on its callers to do so; fix for
	the part of [Bug 495830] that is new in 8.4. 
	* tests/interp.test: Added tests 18.9 (knownbug) and 18.10

2003-06-09  Andreas Kupries  <andreask@activestate.com>

	* generic/tcl.decls:  Ported the changes from the
	* generic/tcl.h:      'tip-59-implementation' branch into the CVS
	* generic/tclBasic.c: head. Regenerated stub table. Regenerated
	* generic/tclInt.h:   the configure's scripts, with help from Joe
	* generic/tclDecls.h  English.
	* generic/tclStubInit.c:
	* generic/tclConfig.c:
	* generic/tclPkgConfig.c:
	* unix/Makefile.in:   
	* unix/configure.in:  The changes in the windows section are not
	* unix/tcl.m4:        yet committed, they await feedback from
	* unix/mkLinks:       David Gravereaux.
	* doc/RegConfig.3: