@@ -1,3 +1,14 @@
+2003-06-23  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* generic/tclFCmd.c: fix to bad error message when trying to
+        do 'file copy foo ""'. [Bug 756951]
+        * tests/fCmd.test: added two new tests for the bug.
+
+	* win/tclWinFile.c:
+	* win/tclWin32Dll.c: recommitted some filesystem globbing 
+        speed-ups, but disabled some on the older Win 95/98/ME where
+        they don't seem to work.
+
 2003-06-18  Miguel Sofer <msofer@users.sf.net>
 
 	* generic/tclNamesp.c (Tcl_Export): removed erroneous comments
@@ -11,6 +22,7 @@
 	* generic/tclCmdMZ.c:
 	* tests/regexp.test: fixing of bugs related to regexp and regsub
         matching of empty strings.  Addition of a number of new tests.
+        [Bug 755335]
 
 2003-06-16  Andreas Kupries  <andreask@activestate.com>
 
